force-app/main/default/objects/POE_Callout_Config_API__mdt/POE_Callout_Config_API__mdt.object-meta.xml
<CustomObject>
    <label>Callout Config API</label>
    <pluralLabel>Callout Config APIs</pluralLabel>
</CustomObject>