force-app/main/default/objects/POE_Callout_Config_API__mdt/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>