force-app/main/default/objects/POE_Callout_Config_API__mdt/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>